# workflows

./: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build-python-package.jinja.yaml  build-python-package.yaml  build.yaml  create-pr.jinja.yaml  create-pr.yaml  create-tag-and-release.jinja.yaml  create-tag-and-release.yaml  pr_has_changelog.yaml  run_tox.yaml  tox.jinja.yaml  tox.yaml
changelog.d/: 20260105_140456_sirosen_selectable_tox_plugins.rst  20260225_170218_kurtmckee_add_release_workflows.rst
docs/: adding-new-workflows.rst  build-python-package.rst  create-pr.rst  create-tag-and-release.rst  tox.rst
requirements/: README.rst
requirements/mypy/: pyproject.toml
src/: render-templates.py  update-pre-commit-additional-dependencies.py
src/workflow_assets/create_pr/: compute_versioned_variables.py  config-schema.json  create_commit_request_body.py
src/workflow_assets/create_tag_and_release/: get_tag_name.py  validate_repo_state.py
src/workflow_assets/tox/: config-schema.json  config_transformer.py
tests/: conftest.py
tests/create_pr/: test_create_commit_request_body.py
tests/create_tag_and_release/: test_get_tag_name.py  test_validate_repo_state.py
tests/tox/: test_config_schema.py  test_config_transformer.py
